--- a/style.css
+++ b/style.css
@@ -21,14 +21,25 @@ body {
 
   --background: #ebeceb;
   --bg-card: #fefefe;
-  --title-color: #2a2a2a;
-  --text-color: #888888;
+  --black: #040505;
+  --white: #fff;
+  --color-primary: #2a2a2a;
+  --color-secondary: #888888;
   --disabled: #cecfd0;
-  --violet-grad: #7c92f8;
-  --purple-grad: #c3baf9;
+  --color-violet: #7c92f8;
+  --color-purple: #c3baf9;
+  --color-pink: #cd6799;
   --border-radius: 2rem;
 }
+p {
+  font-size: 1.6rem;
+  font-weight: 300;
+}
 
+::selection {
+  background-color: var(--color-violet);
+  color: var(--background);
+}
 .flex {
   display: flex;
 }
@@ -44,11 +55,16 @@ body {
 
 .title {
   font-size: 1.8rem;
-  font-weight: bold;
+  font-weight: 300;
+  color: var(--black);
 }
 
 .gradient {
-  background: linear-gradient(90deg, var(--text-color), var(--title-color));
+  background: linear-gradient(
+    90deg,
+    var(--color-secondary),
+    var(--color-primary)
+  );
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
@@ -97,7 +113,8 @@ body {
 
 .welcome p {
   font-size: 3rem;
-  font-weight: 700;
+  font-weight: 300;
+  color: var(--black);
 }
 .profile {
   grid-area: profile;
@@ -108,22 +125,24 @@ body {
 .profile .profile-avatar {
   width: 12rem;
   height: 12rem;
-  background-color: var(--title-color);
+  background-color: var(--color-primary);
   border-radius: 50%;
 }
 .profile .profile-name h2 {
   font-size: 2.4rem;
   padding-top: 1.2rem;
+  font-weight: 400;
+  color: var(--black);
 }
 .profile .profile-name h3 {
   font-size: 1.4rem;
-  color: var(--text-color);
-  font-weight: 400;
+  color: var(--color-secondary);
+  font-weight: 300;
   text-align: center;
 }
 .profile .profile-about p {
   font-size: 1.6rem;
-  color: var(--text-color);
+  color: var(--color-secondary);
   padding-top: 2.8rem;
 }
 .resume {
@@ -132,7 +151,7 @@ body {
   justify-content: center;
 }
 .resume a {
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -147,7 +166,7 @@ body {
 }
 
 .resume .fill {
-  background: linear-gradient(90deg, var(--purple-grad), var(--violet-grad));
+  background: linear-gradient(90deg, var(--color-purple), var(--color-violet));
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
@@ -157,11 +176,53 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
+  overflow: hidden;
+  background-color: var(--bg-card);
+  background-image: url(./assets/mail.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
-.mail .image {
+.mail .overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
-  right: 1rem;
-  bottom: 0.5rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(100, 100, 111, 0.2);
+  backdrop-filter: blur(5px);
+  opacity: 0;
+  transition: 0.3s;
+  gap: 1.8rem;
+}
+.mail .overlay p {
+  font-size: 1.8rem;
+  color: var(--color-primary);
+  font-weight: 200;
+}
+.mail:hover .overlay {
+  opacity: 1;
+}
+.mail .copy-mail {
+  display: none;
+}
+
+.mail .copy {
+  background-color: transparent;
+  border: none;
+  padding: 1rem;
+  transition: 0.5s ease;
+}
+
+.mail .copy svg {
+  fill: var(--color-primary);
+}
+
+.mail .copy:hover {
+  transition: 0.5s ease;
+  cursor: pointer;
 }
 .hello {
   grid-area: hello;
@@ -180,7 +241,7 @@ body {
 }
 
 .hello-message span {
-  color: var(--text-color);
+  color: var(--color-secondary);
 }
 .hello-message h1 {
   font-size: 7rem;
@@ -191,9 +252,9 @@ body {
 
   background: linear-gradient(
     90deg,
-    var(--text-color),
-    var(--title-color),
-    var(--text-color)
+    var(--color-secondary),
+    var(--color-primary),
+    var(--color-secondary)
   );
   background-clip: text;
   -webkit-background-clip: text;
@@ -221,7 +282,7 @@ body {
 }
 .stacks {
   grid-area: stacks;
-  gap: 4rem;
+  gap: 2rem;
   align-items: center;
   flex-direction: column;
 }
@@ -241,7 +302,18 @@ body {
   align-items: center;
   justify-content: center;
   border-radius: 0.8rem;
-  cursor: pointer;
+
+  position: relative;
+}
+
+.stacks .ico:nth-child(n + 6) {
+  border: 1px solid var(--color-pink);
+}
+
+.stacks .description p {
+  color: var(--color-pink);
+  font-size: 1.4rem;
+  font-weight: 200;
 }
 
 .stacks .tailwind svg path,
@@ -254,13 +326,20 @@ body {
 .stacks .typescript svg path:nth-child(1) {
   fill: var(--disabled);
 }
-
-[data-tooltip] {
+.stacks .description {
+  width: 85%;
+  justify-content: space-between;
+  align-items: center;
   position: relative;
-  cursor: pointer;
+  gap: 1rem;
 }
 
-[data-tooltip]::after {
+/* [data-tooltip] {
+  position: relative;
+  cursor: pointer;
+} */
+
+/* [data-tooltip]::after {
   position: absolute;
   width: 20rem;
   top: -9rem;
@@ -268,7 +347,7 @@ body {
 
   content: attr(data-tooltip);
   color: var(--disabled);
-  background-color: var(--title-color);
+  background-color: var(--color-primary);
   padding: 1rem;
   font-size: 1.4rem;
   border-radius: 1.2rem;
@@ -277,14 +356,14 @@ body {
   opacity: 0;
   transform: translateY(3rem);
   transition: all 0.4s ease-in-out;
-}
+} */
 
-[data-tooltip]:hover::after {
+/* [data-tooltip]:hover::after {
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
   transition: all 0.5s ease-in-out;
-}
+} */
 
 .depoiments {
   grid-area: depoiments;
@@ -306,12 +385,20 @@ body {
   grid-area: contact;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.contact .contact .title {
+  color: var(--black);
+  font-weight: 400;
 }
 
 .contact .contacts-card {
-  background-color: #fff;
+  background-color: rgba(100, 100, 111, 0.2);
+  backdrop-filter: blur(5px);
   border-radius: var(--border-radius);
+  width: 70%;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
